@@ -199,37 +199,6 @@ can clearly be made more efficient by offering direct iteration rather
 than repeated reentry into the index - so having indices that support
 iteration in such a style would be useful eventually.
 
-Services
-~~~~~~~~
-
-An initial implementation of indexing can probably get away with a small
-number of primitives. Assuming we have write once index files:
-
-Build index
-^^^^^^^^^^^
-
-This should be done by creating an ``IndexBuilder`` and then calling
-``insert(key, value)`` many times. (Indices that support sorting,
-topological sorting etc, will want specialised insert methods).
-
-When the keys have all been added, a ``finish`` method should be called,
-which will return a file stream to read the index data from.
-
-Retrieve entries from the index
-^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
-
-This should allow random access to the index using readv, so we probably
-want to open the index on a ``Transport``, then use ``iter_entries(keys)``,
-which can return an iterator that yields ``(key, value)`` pairs in
-whatever order makes sense for the index.
-
-Merging of indices
-^^^^^^^^^^^^^^^^^^
-
-Merging of N indices requires a concordance of the keys of the index. So
-we should offer a ``iter_all_entries`` call that has the same return type
-as the ``iter_entries`` call.
-
 Changing our current indexes
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
@@ -248,70 +217,30 @@ Replace .kndx
 
 We could discard the per-knit .kndx by writing a new index at the end of
 every bzr transaction indexing the new data introduced by the bzr
-operation. e.g. at the end of fetch.
+operation. e.g. at the end of fetch. This can be based on the new
+``GraphIndex`` index type.
 
-We can keep the knit data file if  the new index was a specialised index
-with parent pointers that are native pointers inside the index values -
-something like:
- * list of byte locations for the parent keys entries in this index or
-   [-1] for not present in the index (its just a name to be pointed at)
- * byte offset for the data record in the knit
- * byte length for the data record in the knit
- * byte locations for parent key it is compressed against, -1 for full
-   text
- * sha1sum ? (Do we have sufficient sha1 pointers to not need this in the
-   index?)
- * noeol will need a flag too as that does not appear to be in the zip
- data.
+Encoding a knit entry into a ``GraphIndex`` can be done as follows:
 
-Separation of concerns, and having something that can be used outside
-knits suggests splitting this differently. Lets build an index that can
-store a graph efficiently. So the index itself understands:
- * key
- * parents list
- * value
-And then in the value we can serialise:
- * byte offset for the data record in the knit
- * byte length for the data record in the knit
- * full text/not full text. (no less general than knit indices).
- * sha1sum ? (Do we have sufficient sha1 pointers to not need this in the
-   index?)
- * noeol will need a flag too as that does not appear to be in the zip
- data.
-
-Trading off some complexity we could have the index understand:
- * key
- * A list of node-referencing lists (e.g. 2 lists of parents)
- * value
-And then in the value we serialise:
- * byte offset for the data record in the knit
- * byte length for the data record in the knit
- * sha1sum ? (Do we have sufficient sha1 pointers to not need this in the
-   index?)
- * noeol will need a flag too as that does not appear to be in the zip
- data.
- In this scenario we will have the first parents list be the graph
- parents, and the second parents list be the compression parents. (empty
- for full text)
-
-Index merging can take place easily because all the data that we may
-choose to dictionary compress within the index is maintained by the index,
-the only data in the value for each entry is data solely relevant to the
-knit data file.
-
-We could map knit indices to this by:
- - giving ghosts their own record with -1 as the byte offset
- - making operations like get_parents resolve pointers
+* Change the key to include a prefix of the knit name, to allow filtering
+  out of data from different knits.
+* Encode the parents from the knit as the zeroth node reference list.
+* If the knit hunk was delta compressed encode the node it was delta
+  compressed against as the 1st node reference list (otherwise the 1st
+  node reference list will be empty to indicate no compression parents).
+* For the value encode similarly to the current knit format the byte
+  offset for the data record in the knit, the byte length for the data
+  record in the knit and the no-end-of-line flag.
 
 Its important to note that knit repositories cannot be regenerated by
-scanning .knits, data from .kndx is needed too, so a .knit based store still
-requires all the information that the current .kndx contains.
+scanning .knits, so a mapped index is still irreplaceable and must be
+transmitted on push/pull.
 
 A potential improvement exists by specialising this further to not record
 data that is not needed - e.g. an index of revisions does not need to
 support a pointer to a parent compressed text as revisions.knit is not
 delta-compressed ever. Likewise signatures do not need the parent pointers
-as there is no 'signature graph'.
+at all as there is no 'signature graph'.
 
 Data 
 ----
